* Added csv export return value to doExport method
* Fixed DSO-2150 samplerates

2010-09-21  Oliver Haag  <oliver.haag@gmail.com>
* Fixed print shortcut
* Made samplerate calculation more flexible
* DSO-5200 data conversion bugfix
* Exporter::setFormat not filtering CSV format out anymore
* Removed misplaced " before voltages in exported CSV file

2010-09-27  Oliver Haag  <oliver.haag@gmail.com>
* Some bugfixes for the DSO-5200
* Simplified trigger point calculation and correct handling for fast rate mode
* Recalculating pretrigger position after samplerate changes

2010-09-29  Oliver Haag  <oliver.haag@gmail.com>
* Added spectrums to exported csv files
* Using autocorrelation for frequency detection now
* Some undefined value bugfixes

2010-12-13  Oliver Haag  <oliver.haag@gmail.com>
* Triggermode Auto working correctly now
* Improved frequency detection routine

2011-01-22  Oliver Haag  <oliver.haag@gmail.com>
* Storing positions of docking windows and toolbars in settings now
* Added submenu to show/hide docking windows and toolbars to the View menu

2011-01-22  Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Wrong pretrigger position when using a DSO-2090
* Improved timing of the Hantek DSO sampling routine
* Bugfix: Wrong misc field in measurement table after enabling a channel

2011-01-23  Oliver Haag  <oliver.haag@gmail.com>
* Properly applying saved dock window and toolbar positions on startup now

2011-01-25  Oliver Haag  <oliver.haag@gmail.com>
* German translation updated

2011-02-09  Oliver Haag  <oliver.haag@gmail.com>
* Version 0.2.0:
* Updated version information
* Updated Doxygen mainpage and roadmap

2011-11-16 Oliver Haag  <oliver.haag@gmail.com>
* Redesign of Hantek::Control to make it easier to add support for new models
* Removed buggy destructor from GlGenerator, proper cleanup still missing

2011-11-16 Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Copy-paste in Hantek::Control::setOffset, thanks to tinosnitso